# Locus

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.live.yml  docker-compose.yml  train.sh
4dsky-mlat-challenge/: .env.pps  main.go  main.go.bak
docs/: CLOCK_SYNCHRONIZATION.md  Clock_Sync_Audit.md  GDOP_HEATMAP_IMPLEMENTATION.md  GLOBAL_CLOCK_SOLVER_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  Semi_MLAT.md  Semi_MLAT_Audit.md  imp_fixes.md
frontend/: Dockerfile  index.html
go-ingestor/: Dockerfile  go.mod  main.go
ml-service/: .dockerignore  Dockerfile  constants.py  main.py  model.py  requirements.txt  train.py
rust-backend/: Cargo.toml  Dockerfile
rust-backend/src/: adsb_parser.rs  anomaly_client.rs  clock_sync.rs  consts.rs  coords.rs  correlator.rs  gdop_heatmap.rs  global_clock_solver.rs  ingestor.rs  kalman.rs  main.rs  mlat_solver.rs  opensky_client.rs  semi_mlat_solver.rs  sensors.rs  spoof_detector.rs  virtual_sensors.rs  ws_server.rs
