[package]
name = "locus-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "locus-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket server
tokio-tungstenite = "0.24"
futures-util = "0.3"

# HTTP client (for Python ML service)
reqwest = { version = "0.12", features = ["json"] }

# Math / MLAT
nalgebra = "0.33"
levenberg-marquardt = "0.14"

# Geographic utilities (ENU rotation, NL table)
# (pure Rust, no external dep needed — implemented in coords.rs)

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing (fast correlation key)
rustc-hash = "2"
hex = "0.4"

# CLI flags
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
